added google fonts

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
     <!-- Header -->
     <header>Header</header>
+    <h1> Hiya yaa</h1>
 
     <!-- Main content -->
     <main>Main content</main>
