started using mac and cloned etc

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     <main>Main content</main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer><ul>
+        <li>Facebook</li>
+    </ul></footer>
 </body>
 
 </html>
