--- a/signup.html
+++ b/signup.html
@@ -57,7 +57,31 @@
     </header>
 
     <!-- Main content -->
-    <main>Main content</main>
+    <main><section id="signup">
+      <form id="signup-form" method="post" action="https://formdump.codeinstitute.net">
+        <h2><i class="fa-solid fa-heart-pulse"></i>Let's get you signed up!</h2>
+        <label for="first-name">First Name</label><input type="text" name="first-name" id="first-name" class="text-input" required>
+        <br>
+        <label for="last-name">Last Name</label><input type="text" name="last-name" id="last-name" class="text-input" required>
+        <br>
+        <label for="email-address">Email Address</label><input type="email-address" name="email-address" id="email-address" class="text-input" required>
+        <br>
+        <div id="radio-buttons">
+          <div id="road">
+            <label for="road">Road</label><input type="radio" name="running-preference" id="road" value="road" required checked>
+          </div>
+          <div>
+            <label for="trail">Trail</label><input type="radio" name="running-preference" id="trail" value="trail" required>
+          </div>
+          <div>
+            <label for="both">Both</label><input type="radio" name="runnning-preference" id="both" value="both">
+          </div>
+        </div>
+        <button type="submit" id="join-button">Let's Run!</button>
+
+      </form>  
+
+    </section></main>
 
     <!-- Footer -->
     <footer>
