--- a/signup.html
+++ b/signup.html
@@ -1,41 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta
-      name="description"
-      content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park"
-    />
-    <meta
-      name="keywords"
-      content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"
-    />
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/favicon/favicon-16x16.png"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css" />
-  </head>
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
 
   <body>
     <!-- Header -->
@@ -64,10 +45,10 @@
         <br>
         <label for="last-name">Last Name</label><input type="text" name="last-name" id="last-name" class="text-input" required>
         <br>
-        <label for="email-address">Email Address</label><input type="email-address" name="email-address" id="email-address" class="text-input" required>
+        <label for="email-address">Email Address</label><input type="email" name="email-address" id="email-address" class="text-input" required>
         <br>
         <div id="radio-buttons">
-          <div id="road">
+          <div>
             <label for="road">Road</label><input type="radio" name="running-preference" id="road" value="road" required checked>
           </div>
           <div>
