--- a/gallery.html
+++ b/gallery.html
@@ -40,6 +40,7 @@
     <!-- Main content -->
     <main>
       <section id="gallery">
+        <h2 class="hidden-heading">Gallery</h2>
         <div id="photos">
           <img src="assets/images/athletes.webp" alt="Two athletes running together">
           <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
@@ -87,8 +88,8 @@
               href="https://www.x.com"
               target="_blank"
               aria-label="Visit our X.com page (opens in new tab)"
-              ><i class="fa-brands fa-x-twitter"></i></i
-            ></a>
+              ><i class="fa-brands fa-x-twitter"></i></i>
+            </a>
           </li>
       </ul>
     </footer>
