--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
       <a href="index.html">
         <h1 id="logo">Love Running</h1>
       </a>
-      <input type="checkbox" id="nav-toggle" name="nav-toggle"/>
+      <input type="checkbox" id="nav-toggle" name="nav-toggle">
       <label for="nav-toggle" class="nav-toggle-label">
         <i class="fa-solid fa-bars"></i>
       </label>
@@ -88,7 +88,7 @@
               href="https://www.x.com"
               target="_blank"
               aria-label="Visit our X.com page (opens in new tab)"
-              ><i class="fa-brands fa-x-twitter"></i></i>
+              ><i class="fa-brands fa-x-twitter"></i>
             </a>
           </li>
       </ul>
